[package]
name = "qbit-cert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0-pre.4"
serde_json = "1.0.72"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[dev-dependencies]
workspaces = { git = "https://github.com/near/workspaces-rs", rev = "098b2c33a275f03fe755b1e9873b50d816b076cb" }
tokio = { version = "1", features = ["macros"] }
